<resources>
    <string name="app_name">Cockpit++</string>
    <string name="subTitle">for DCS</string>
    <string name="not_available">Not available yet</string>
    <string name="wrong_module_1">These instruments can\'t work for the module </string>
    <string name="wrong_module_2">. Please select the right module</string>
    <string name="wrong_module_2bis">.\nI loaded the correct screen for you ;-)</string>
    <string name="wrong_lua_version">Your Cockpit++.lua is not up do date, please download and install the last version of the Cockpit++.lua</string>
    <string name="wrong_app_version">Your Cockpit++ application is not up do date, please install the new version</string>
    <string name="quitAgain">Click again to leave</string>
    <string name="version">version</string>
    <string name="HeadKey">Cockpit++</string>
    <string name="teasing">May be the next one&#8230; \n\n¯\\_(ツ)_/¯</string>
    <string name="need_update_lua">To enjoy the new features, you need to download and install into the scripts folder the new Cockpit++.lua file\n\nMore information in the \"Install guide\"</string>
    <string name="ok">OK</string>
    <string name="menu_mypanel">My panel</string>
    <string name="menu_av8bna">AV-8B Harrier</string>
    <string name="menu_a10c">A-10C Warthog</string>
    <string name="menu_ajs37">AJS-37 Viggen</string>
    <string name="menu_c101">C-101EB</string>
    <string name="menu_fa18c">F/A-18C Hornet</string>
    <string name="menu_f15c">F-15C Eagle</string>
    <string name="menu_f5e">F-5E Tiger II</string>
    <string name="menu_l39">L-39 Albatros</string>
    <string name="menu_mi8">Mi-8MTV2</string>
    <string name="menu_mig21">Mig-21bis</string>
    <string name="menu_mig29">Mig-29 Fulcrum</string>
    <string name="menu_m2kc">Mirage 2000C</string>
    <string name="menu_ka50">Ka-50 Blackshark</string>
    <string name="menu_sa342">SA342 Gazelle</string>
    <string name="menu_su25">Su-25 Frogfoot</string>
    <string name="menu_su27">Su-27 Flanker</string>
    <string name="menu_su33">Su-33 Flanker D</string>
    <string name="menu_huey">UH-1H Huey</string>
    <string name="menu_guide">Install guide</string>
    <string name="menu_not_guide">Not working?</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_choose">Choose your format:</string>
    <string name="menu_choose_smartphone">Smartphone</string>
    <string name="menu_choose_tablet">Tablet</string>
    <string name="guide_intro">How to make DCS communicating with the app?</string>
    <string name="guide_subintro">To communicate by wifi, your Android and your DCS must know the IP address of each other, you will find here the steps to configure everything</string>
    <string name="guide_step1">1) Download the <b>Cockpit++.lua</b></string>
    <string name="guide_step1dl">from here: <a href="https://github.com/Margouill/CockpitPP/blob/main/Cockpitpp.lua">https://github.com/Margouill/CockpitPP/blob/main/Cockpitpp.lua</a></string>
    <string name="guide_step2">2) Go in <u>C:\\Users\\yourUser\\Saved Games\\DCS\\Scripts</u> folder (create if not exist)</string>
    <string name="guide_step3">3) Open the <b>export.lua</b> file (create it if not exist) and add the line:</string>
    <string name="guide_step3bis"><i>local Cockpitpp=require(\'lfs\');dofile(Cockpitpp.writedir()..\'Scripts/Cockpitpp.lua\')</i></string>
    <string name="guide_step3ter">if you don\'t know how to create the Export.lua file, you can take the one you downloaded with Cockpitpp.lua</string>
    <string name="guide_step4">4) In the same folder, add the file <b>Cockpitpp.lua</b>\nNow you should have this:</string>
    <string name="guide_step5">5) Open the <b>Cockpitpp.lua</b> and add the IP address of your Android phone (You will find the Android IP in the Cockpit++ application, in "settings", you must be connected by wifi on the same network than your computer)</string>
    <string name="guide_step5Example1">For example, if you Android IP is <b>192.168.0.12</b>, you must write:</string>
    <string name="guide_step5Example2">Of course you can use several Android devices in the same time, just add other Android IP if you want to use Cockpit++ with more than 1 device:</string>
    <string name="guide_step6">6) In the app, go to Settings, add your computer\'s IP \nYou will get your computer\'s IP by doing:\n - Windows touch + \"R\"\n - typing \"cmd\" and pressing \"enter\"\n - typing \"ipconfig\" in the console\n - get your ipv4 address \nBy default ports are configured even if these seem empty, but you can manage them, just be sure you are using the same ports in you app and <b>Cockpitpp.lua</b></string>
    <string name="guide_step7">7) Now <u>start a mission, remove the pause, startup your plane</u> and it should work :)</string>
    <string name="guide_step8">8) Not working? check the previous steps and/or restart the app</string>
    <string name="guide_step9">9) Still not working? Then go in <b><u><i>Not working?</i></u></b> in the app, you will have some ideas of possible problems with the solution </string>
    <string name="guide_stepTrick"><b>Trick</b>: the LUA files must be saved <u>before</u> you launch DCS</string>
    <string name="guide_good_flight">Good flight sir! O7</string>
    <string name="not_working_intro">Still having trouble to configure the app?</string>
    <string name="not_working_subintro">If you are sure you have exactly followed the installation guide and you still have problem to connect the app with the game, here you will find some ideas about possible problems</string>
    <string name="not_working_step1">1) In the <b>Cockpitpp.lua</b>, are you sure you typed your Android IP like this:\nlocal clientIP={\"192.168.0.10\"}\nand not like this:\nlocal clientIP={192.168.0.10}\n?</string>
    <string name="not_working_step2">2) In the <b>Cockpitpp.lua</b>, are you sure you didn\'t touch/remove/add any \"&#8212;\" characters? They are used add comments in the script, they are not interpreted by the computer. You can manipulate them if you have some programming knowledges</string>
    <string name="not_working_step3">3) Are you sure your computer where DCS is running is on the same network than your Android?</string>
    <string name="not_working_step4">4) Maybe you have a blocking antiVirus/firewall?</string>
    <string name="not_working_step5">5) Maybe your refused some permission on your Android for this app?</string>
    <string name="not_working_step6">6) Did you activate your wifi/wireless on your Android?</string>
    <string name="not_working_step7">7) If you have doubts about your Cockpitpp.lua configuration because default <b><i>Notepad</i></b> in your Windows isn\'t clear enough for you, I suggest you to use <b><i>Notepad++</i></b> instead of the basic <b><i>Notepad</i></b>,then the script will be easier to read, and you will see difference between the executed code and the commented lines (for explanations)</string>
    <string name="not_working_step8">8) If the app shows the data from the game but you can\'t send actions to DCS, it means you made a mistake in the Android app</string>
    <string name="not_working_step9">9) If you can send actions to DCS but the app doesn\'t show the data on the panel in the app , it means you made a mistake in the Cockpitpp.lua</string>
    <string name="not_working_step10">10) Be sure you are <u>not</u> in the menu, the connection will work only if you are in running game (with no pause)</string>
    <string name="not_working_step11">11) When you download and extract the files, be sure about their type. Windows could hide the type of the file (the extension .lua), so some people added ".lua" so the name of the files and had \'Cockpit++.lua.lua\' instead of \'Cockpit++.lua\' (same with the Export.lua) </string>
    <string name="not_working_step12">12) Join us on our Discord server to help you to install the application: </string>
    <string name="discord">https://discord.gg/qEZMPm42Z7</string>
    <string name="about_by_who">Started by <i><b>Astazou</b></i>, <i>Simon CHEVALIER</i></string>
    <string name="about_by_who2">Recovered by <i><b>Margouill</b></i>, <i>Sébastien NOGUERA</i></string>
    <string name="about_intro">Cockpit++ is an application for DCS (Digital Combat Simulator), if you don\'t own the game with proper modules this application is useless for you, sorry bro!</string>
    <string name="about_thanks">I would like to thank everybody who helped me for this app:\n- friends\n- ED\'s community ( <a href="https://forums.eagle.ru/">forums.eagle.ru</a> )\n- CheckSix\'s community ( <a href="http://www.checksix-forums.com/index.php">checksix-forums.com</a> )\n- Hoggit\'s community ( <a href="https://www.reddit.com/r/hoggit/">www.reddit.com/r/hoggit/</a> )\n- Razbam</string>
    <string name="about_thanks_photo">Background image is from <a href="https://pixabay.com/fr/ciel-nuage-coucher-de-soleil-gris-1054733/">pixabay.com/fr/ciel-nuage-coucher-de-soleil-gris-1054733/</a> </string>
    <string name="about_thanks_font">Font are from <a href="http://www.dafont.com/fr/digital-display-tfb.font">http://www.dafont.com/fr/digital-display-tfb.font</a> and from  <a href="http://www.dafont.com/fr/hemi-head.font">http://www.dafont.com/fr/hemi-head.font</a> </string>
    <string name="about_thanks_Huertix">Special thanks to <b><i>Huertix</i></b>, his app for the <b><i>A-10C Warthog</i></b> motivated Astazou to developp Cockpit++, here is his app <a href="https://play.google.com/store/apps/details?id=com.dev.huertix.throttle_dcs_beta">https://play.google.com/store/apps/details?id=com.dev.huertix.throttle_dcs_beta</a> </string>
    <string name="about_contributors">Also special thanks to contributors of this project:\n- <b><i>ArthurDCS</i></b> for the VVI,the HSI and the EMIs for the A-10C \n- **Your nickname if you contribute :D** </string>
    <string name="about_github">Do you want to take part of the project? (translation?new panel?new plateform?&#8230; ?)  Come talk with us on our Discord server: </string>
    <string name="changelog">ChangeLog</string>
    <string name="changelog_1">05&#8211;29&#8211;2017:\n• PCA for Mirage 2000C by Razbam\n• PPA for Mirage 2000C by Razbam\n• RWR for F-15C by ED\n</string>
    <string name="changelog_2">09&#8211;14&#8211;2017:\n• INS for Mirage 2000C by Razbam\n• INS Knobs for Mirage 2000C by Razbam\n• Armament Panel for the Huey by BelSimTek\n</string>
    <string name="changelog_3">11&#8211;16&#8211;2017:\n• Better stability for Android 7 users\n• Fix bug of freeze after ejection\n• User can\'t anymore enter text in ports\n• Added explanations in the installation guide\n</string>
    <string name="changelog_4">12&#8211;15&#8211;2017:\n• Nozzle for AV-8B n/a Harrier by Razbam\n• Tablet mod to have several panels\n• The application is now open-sourced! (documentation will come soon)\n• Discord server opened for anyone\n</string>
    <string name="changelog_5">06&#8211;10&#8211;2018:\n• VVI for the A-10C by Eagle Dynamics\n• HSI for the A-10C by Eagle Dynamics\n• EMIs for the A-10C by Eagle Dynamics\n• Radar management panel for the Mig-21Bis by Leatherneck Simulations\n• The application has now a documentation to learn how to make a panel\n• App is now in fullscreen mod\n</string>
    <string name="changelog_6">15&#8211;11&#8211;2020:\n• Fix bug on MIRAGE 2000C by Razbam\n• PUI800 for Ka-50 by Eagle Dynamics\n• Overhead for Ka-50 by Eagle Dynamics\n• UV26 for Ka-50 by Eagle Dynamics\n• PRTz for Ka-50 by Eagle Dynamics\n• LWR for Ka-50 by Eagle Dynamics\n</string>
    <string name="changelog_7">04&#8211;12&#8211;2020:\n• Fix bug on API24+\n</string>
    <string name="changelog_8">04&#8211;12&#8211;2021:\n• V/UHF for Mirage 2000C by Razbam\n• New look for Ka-50 by Eagle Dynamics\n</string>
</resources>