<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.margouill.cockpitpp.activities.Menu_Activity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/sky_background"
        android:contentDescription="@null"/>

    <ScrollView
        android:id="@+id/scrollLayout"
        android:layout_width="175dp"
        android:layout_height="match_parent"
        android:background="#5321">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/a10c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/menuButtonTextColor"
                android:gravity="start|center_vertical"
                android:scaleType="fitCenter"
                android:padding="6dp"
                android:background="@drawable/button_menu"
                android:textSize="20sp"
                android:text="@string/menu_a10c"
                />

            <Button
                android:id="@+id/av8bna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/menuButtonTextColor"
                android:gravity="start|center_vertical"
                android:scaleType="fitCenter"
                android:padding="6dp"
                android:background="@drawable/button_menu"
                android:textSize="20sp"
                android:text="@string/menu_av8bna"
                />

            <Button
                android:id="@+id/f15c"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/menuButtonTextColor"
                android:gravity="start|center_vertical"
                android:scaleType="fitCenter"
                android:padding="6dp"
                android:background="@drawable/button_menu"
                android:textSize="20sp"
                android:text="@string/menu_f15c"
                />

            <Button
                android:id="@+id/mig21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/menuButtonTextColor"
                android:gravity="start|center_vertical"
                android:scaleType="fitCenter"
                android:padding="6dp"
                android:background="@drawable/button_menu"
                android:textSize="20sp"
                android:text="@string/menu_mig21"
                />

            <Button
                android:id="@+id/mirage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/menuButtonTextColor"
                android:gravity="start|center_vertical"
                android:scaleType="fitCenter"
                android:padding="6dp"
                android:background="@drawable/button_menu"
                android:textSize="20sp"
                android:text="@string/menu_m2kc"
                />

            <Button
                android:id="@+id/ka50"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_menu"
                android:gravity="start|center_vertical"
                android:padding="6dp"
                android:scaleType="fitCenter"
                android:text="@string/menu_ka50"
                android:textColor="@color/menuButtonTextColor"
                android:textSize="20sp"
                />

            <Button
                android:id="@+id/huey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/menuButtonTextColor"
                android:gravity="start|center_vertical"
                android:scaleType="fitCenter"
                android:padding="6dp"
                android:background="@drawable/button_menu"
                android:textSize="20sp"
                android:text="@string/menu_huey"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:background="@color/menuDivider"/>

            <Button
                android:id="@+id/config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:textColor="@color/menuButtonTextColor"
                android:gravity="start|center_vertical"
                android:background="@drawable/button_menu"
                android:textSize="20sp"
                android:text="@string/menu_settings"
                />

            <Button
                android:id="@+id/guide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:textColor="@color/menuButtonTextColor"
                android:gravity="start|center_vertical"
                android:background="@drawable/button_menu"
                android:textSize="20sp"
                android:text="@string/menu_guide"
                />

            <Button
                android:id="@+id/not_working"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:textColor="@color/menuButtonTextColor"
                android:gravity="start|center_vertical"
                android:background="@drawable/button_menu"
                android:textSize="20sp"
                android:text="@string/menu_not_guide"
                />

            <Button
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:textColor="@color/menuButtonTextColor"
                android:gravity="start|center_vertical"
                android:background="@drawable/button_menu"
                android:textSize="20sp"
                android:text="@string/menu_about"
                />

            <Button
                android:id="@+id/faq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:textColor="@color/menuButtonTextColor"
                android:gravity="start|center_vertical"
                android:background="@drawable/button_menu"
                android:textSize="20sp"
                android:text="@string/menu_faq"
                />

            <Button
                android:id="@+id/exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:textColor="@color/menuButtonTextColor"
                android:gravity="start|center_vertical"
                android:background="@drawable/button_menu"
                android:textSize="20sp"
                android:text="@string/menu_exit"
                />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/scrollLayout"
        android:orientation="vertical"
        tools:weightSum="1">

        <View
            android:id="@+id/view86"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05" />

        <ImageView
            android:id="@+id/menuIcone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:src="@drawable/icone" />

        <View
            android:id="@+id/view87"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05" />

        <TextView
            android:id="@+id/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAppearance="@style/PagerTabStripText"
            android:textColor="@color/menuButtonTextColor"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/subTitle"
            android:textAppearance="@style/PagerTabStripText"
            android:textColor="@color/menuButtonTextColor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/subVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/version"
            android:textAppearance="@style/PagerTabStripText"
            android:textColor="@color/menuTextColor"
            android:textSize="10sp" />

        <View
            android:id="@+id/view85"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <ImageView
            android:id="@+id/menuDiscord"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.2"
            android:src="@drawable/discord" />

    </LinearLayout>

</RelativeLayout>
